points now add and subtract from dom properly

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 
 			<div class="game" id="gamescreen">
 				<p class="score" id="score">0</p>
-				<canvas id="can"></canvas>
+				<div id="can" class="canvas">
+					<div class="player" id="me"></div>
+					<div class="player" id="it"></div>
+				</div>
 				<p class="talking" id="talking">start playing, butt munch</p>
 			</div>
 
