--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 	<head>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<title>Something Epic!</title>
-		<meta type="" value="width=device-width, initial-zoom=1">
+		<meta name="viewport" content="width=device-width">
 
 		<link href='http://fonts.googleapis.com/css?family=Anonymous+Pro:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="epic.css">
