new audio added to make epicness more epic

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<a class="click small" id="change">change character</a>
 				<a class="click small" id="about">about this game</a>
 
+				<a class="click" id="audio-allow">allow audio?</a>
 				<hr>
 				<p class="small">by tropvache and bootstrut</p>
 
@@ -65,6 +66,13 @@
 				<p class="talking" id="talking">start playing, butt munch</p>
 			</div>
 
+		</div>
+
+		<div class="recordshop">
+			<audio loop="true" autoplay src="audio/se.mp3" id="audio-bg"></audio>
+			<audio src="audio/point.mp3" id="audio-p"></audio>
+			<audio src="audio/bomb.mp3" id="audio-b"></audio>
+			<audio src="audio/bombdeath.mp3" id="audio-d"></audio>
 		</div>
 		
 		<script type="text/javascript" src="helper.js"></script>
