new spritesheet, audio chances, bug fixes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a class="click small" id="change">change character</a>
 				<a class="click small" id="about">about this game</a>
 
-				<a class="click" id="audio-allow">allow audio?</a>
+				<a class="click" id="audio-allow">play background 'melody'?</a>
 				<hr>
 				<p class="small">by tropvache and bootstrut</p>
 
