new manual of gameplay added

--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
 			</div>
 
 
-			<div class="howto" id="howscreen">
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
-				<span class="control" id="howto-right">&gt;</span>
-				<span class="control" id="howto-left">&lt;</span>
-				<span class="control" id="howto-closer">&times;</span>
+			<div class="howto optr" id="howscreen">
+				<p>Use the arrow keys on your keyboard or swipe the screen in the direction you want to move.</p>
+
+				<img src="images/in-hi_1.png" />
+
+				<p>You control one character, but there is another little guy who follows in the opposite fashion. When you move up, it moves down.</p>
+
+				<img src="images/in-hi_2.png" />
+
+				<p>You want to collect points, and avoid bombs. Your score will be saved to your browser so you can gloat to your friends. Let them try and fail to beat your highscore.</p>
+
+				<img src="images/in-hi_3.png" />
+
+				<a class="howtoclose">okay!</a> 
 			</div>
 
 
