wrote the about section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 				<div class="about optr">
 					<section class="about-wrap">
-						<p>This game was made for the August 2014 Ludum Dare Challange. Blah Blah Blah.</p>
-						<p>We built it with stuff. We made it for ourselees. Talk about connected world theme.</p>
+						<p>This game was made for the August 2014 Ludum Dare Challange with the theme <em>Connected Worlds</em>. It was made for the 72 hour challenge, but life took its toll and the game wasn't completed in time to be submitted. The main game was still completed in 72 hours, as a personal challenge. Extra time has been put in to polish the game.</p>
+
+						<p>It is built entirely by two people, <a href="http://alexbencak.com">bootstrut</a> and <a href="http://tropvache.com">tropvache</a>. All ideas, graphics, music, and code have come through us. Javascript makes up most of the guts and brains of this game, and we use DOM manipulation to make the everything move and react to a player. This is an HTML5 game, and it has been optimised for both desktop and mobile devices! If you run into any issues with the game play, please <a href="http://twitter.com/tropvache">tweet</a> at us or start a ticket on <a href="">github</a>.</p> 
 						
 						<span class="about-closer">&times;</span>
 					</section>
